title aside tryng to fix flicker -webkit-transform:translate3d(0,0,0); doesnt work

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ h6 {
       align-self: center;*/
   -webkit-perspective: 1000;
   -webkit-backface-visibility: hidden;
-  -webkit-transform:translate3d(0,0,0);
+/*  -webkit-transform:translate3d(0,0,0);*/
   /*text-align: center;*/
   overflow: hidden;
 }
